2008-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: When creating a project, use
	the provided project name when setting the assembly name. The project
	object name can't be used here because it is still not valid. Fixes
	bug #437392.

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Reset
	the default output assembly name before reading a configuration.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Fixed speed issue.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom.Serialization/NamespaceEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	fixed 'Bug 436312 - Couldn't deal well with elements which have
	generic and non-generic presence at the same time'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed "Bug 432434 - Code
	completion doesn't work with subclasses".

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: When creating a new
	configuration, give it a valid path and assembly name. Fixes bug
	#439047 - Cannot create makefiles.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	Don't crash if the code completion database can't be created. Fixes
	bug #439113 - Exception when trying to close a solution which
	couldn't load all subprojects.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Project.cs: Fix bug 431720 - Build failed. XXX is
	a directory.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs: Fixed accessible
	issue.
